# example-etl-pme

./: LICENSE  README.md  pyproject.toml
assets/: pizza_processed.xlsx  pizza_raw.xlsx  pizza_report.pbip  pizza_report.pbix  processed_data.xlsx  raw_data.xlsx
assets/pizza_report.Report/: .platform  definition.pbir  report.json
assets/pizza_report.Report/.pbi/: localSettings.json
assets/pizza_report.SemanticModel/: .platform  diagramLayout.json
assets/pizza_report.SemanticModel/.pbi/: cache.abf  localSettings.json
assets/pizza_report.SemanticModel/definition/: model.tmdl  relationships.tmdl
assets/pizza_report.SemanticModel/definition/tables/: Answers.tmdl  AnswersChoice.tmdl  AnswersDate.tmdl  AnswersMatrix.tmdl  AnswersRanking.tmdl  AnswersRaw.tmdl  Categories.tmdl  Choices.tmdl  Matrix.tmdl  MatrixAnswers.tmdl  MatrixStatements.tmdl  Rankings.tmdl
docs/: dev_checklist.md  references.md
source/: etl.ipynb  pizza_etl.ipynb  pizza_example.ipynb  settings.py
