[project]
name = "python-software-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest",
    "python-decouple",
    "pandas",
    "openpyxl",
    "ipykernel",
    "sqlalchemy",
    "ollama>=0.6.0",
    "scikit-ollama>=0.3.2",
]
